added form html&css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,31 @@
     <title>Library</title>
 </head>
 <body>
+    <header>
+        <h1>Library</h1>
+        <div class="panel">
+            <button class="add-book">Add Book</button>
+        </div>
+    </header>
     <main class="container">
+        <form action="" class="" id="book-form">
+
+            <label for="form-name">Book name</label>
+            <input type="text" name="name" id="form-name" autocomplete="off">
+
+            <label for="form-author">Author</label>
+            <input type="text" name="author" id="form-author" autocomplete="off">
+
+            <label for="form-pages">Number of pages</label>
+            <input type="number" name="pages" id="form-pages" autocomplete="off">
         
+            <label for="form-read">Finished reading?</label>
+            <input type="checkbox" name="read" id="form-read" autocomplete="off">
+
+        </form>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
