added listeners for form display and book add

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Library</h1>
         <div class="panel">
-            <button class="add-book">Add Book</button>
+            <button id="add-book" class="add-book">Add Book</button>
         </div>
     </header>
     <main class="container">
@@ -30,6 +30,7 @@
             <label for="form-read">Finished reading?</label>
             <input type="checkbox" name="read" id="form-read" autocomplete="off">
 
+            <button type="button" id="form-add">Add</button>
         </form>
     </main>
     <footer>
