added bg darkness during form toggle

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Library</h1>
         <button id="add-book" class="add-book">Add Book</button>
     </header>
+    <div class="bg-darkness"></div>
     <form action="" class="" id="book-form">
 
         <label for="form-name">Book name</label>
